# crewai-marketing-team

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py
src/backend/: __init__.py  db_models.py  main.py
src/backend/services/: __init__.py  marketing_crew.py  task_service.py
src/frontend/: __init__.py  streamlit_app.py
src/shared/: __init__.py  config.py  database.py  models.py
